DISCOVERYACCESS-1706: fix faceet value wrapping for tablet size; improve spacing in facets for icons
Former-commit-id: 7aea1727cd4172ebed5b5afce45fa91dffe4fb64

--- a/app/assets/stylesheets/cornell/_facets.css.scss
+++ b/app/assets/stylesheets/cornell/_facets.css.scss
@@ -48,6 +48,16 @@
 		}
 	}
 }
+.facet-values {
+	.facet-label {
+		text-indent: 0;
+		padding-left: 0;
+		word-break: normal;
+		i {
+			margin-right: 3px;
+		}
+	}
+}
 
 // OVERRIDE #FACETS - TODO: do we still need this in BL5?
 // -------------------------
@@ -64,9 +74,9 @@
 	}
 	// add a little margin back to the format facets due to icons
 	#facet-format {
-		ul {
-			margin-left: 15px;
-		}
+		// ul {
+		// 	margin-left: 15px;
+		// }
 		.facet-count {
 			padding-right: 15px;
 		}
